# csv-storage

./: .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
app/: main.py
scripts/: check  dev  format  prod  test
tests/: test_main.py
