[tool.poetry]
name = "csv-storage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
pandas = "^2.1.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
black = "^23.9.1"
mypy = "^1.5.1"
pandas-stubs = "^2.0.3.230814"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
